add new routs for teachers
