# internal/models/teacher.go
@@ -9,8 +9,14 @@ type TeacherLesson struct {
 }
 
 type TeacherSchedule struct {
-	TeacherFull string `json:"teacher" bson:"teacher_full" example:"Конюхов Алексей Николаевич,Маношкин Алексей Борисович"`
-	Schedule    struct {
+	TeacherFull     string `json:"teacher"          bson:"teacher_full"     example:"Конюхов Алексей Николаевич"`
+	TeacherShort    string `json:"teacher_short"    bson:"teacher_short"    example:"Конюхов А.Н."`
+	Link            string `json:"link"             bson:"link"             example:"https://rsreu.ru/faculties/faitu/kafedri/vm/prepodavateli/9402-item-9402"` //nolint:lll // there is no way to fix it
+	Department      string `json:"department"       bson:"department"       example:"Кафедра высшей математики"`
+	DepartmentShort string `json:"department_short" bson:"department_short" example:"ВМ"`
+	Faculty         string `json:"faculty"          bson:"faculty"          example:"Факультет автоматики и информационных технологий в управлении"` //nolint:lll // there is no way to fix it
+	FacultyShort    string `json:"faculty_short"    bson:"faculty_short"    example:"фаиту"`
+	Schedule        struct {
 		Numerator struct {
 			Monday    []TeacherLesson `json:"monday"    bson:"monday"`
 			Tuesday   []TeacherLesson `json:"tuesday"   bson:"tuesday"`
@@ -32,4 +38,14 @@ type TeacherSchedule struct {
 
 type TeachersList struct {
 	Teachers []string `json:"teachers" bson:"teachers" example:"Конюхов Алексей Николаевич,Маношкин Алексей Борисович"`
+}
+
+type TeacherFaculty struct {
+	Faculty      string `json:"faculty"       bson:"faculty"       example:"Факультет автоматики и информационных технологий в управлении"` //nolint:lll // there is no way to fix it
+	FacultyShort string `json:"faculty_short" bson:"faculty_short" example:"фаиту"`
+}
+
+type TeacherDepartment struct {
+	Department      string `json:"department"       bson:"department"       example:"Кафедра вычислительной и прикладной математики"` //nolint:lll // there is no way to fix it
+	DepartmentShort string `json:"department_short" bson:"department_short" example:"ВМ"`
 }
